--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,19 +19,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/background_forest" />
 
-    <ProgressBar
-        android:id="@+id/mana_bar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="100dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:progressDrawable="@drawable/mana_bar_progress"
-        android:max="100"
-        android:progress="100"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <FrameLayout
         android:layout_width="150dp"
@@ -55,7 +42,6 @@
             android:id="@+id/health_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100/100"
             android:fontFamily="@font/andy_bold"
             android:textSize="23sp"
             android:textColor="#FFFFFF"
@@ -64,6 +50,90 @@
             android:layout_gravity="center" />
     </FrameLayout>
 
+    <FrameLayout
+        android:layout_width="100dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="290dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <ProgressBar
+            android:id="@+id/mana_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:max="100"
+            android:progress="100"
+            android:progressDrawable="@drawable/mana_bar_progress" />
+
+        <TextView
+            android:id="@+id/mana_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/andy_bold"
+            android:textSize="23sp"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_gravity="center"/>
+
+    </FrameLayout>
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/main_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <FrameLayout
+                android:id="@+id/buffs_frame"
+                android:layout_width="185dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/home_frames" />
+
+            <FrameLayout
+                android:id="@+id/players_frame"
+                android:layout_width="180dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/home_frames" />
+
+            <FrameLayout
+                android:id="@+id/loadout_frame"
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/home_frames" />
+
+            <FrameLayout
+                android:id="@+id/potion_frame"
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/home_frames" />
+
+            <FrameLayout
+                android:id="@+id/nav_bar"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                android:background="#232427" />
+        </LinearLayout>
+
+    </ScrollView>
+    <!-- Scrollable Content Ends Here -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
