--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="401dp"
         android:layout_marginTop="0dp"
         android:scaleType="fitXY"
+        android:contentDescription="Background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,8 +26,9 @@
         android:layout_height="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="16dp">
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="30dp">
 
 
         <ProgressBar
@@ -53,8 +55,9 @@
     <FrameLayout
         android:layout_width="100dp"
         android:layout_height="24dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="38dp"
         android:layout_marginEnd="290dp"
+        android:layout_marginStart="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -84,56 +87,155 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/main_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:fillViewport="true">
+        app:layout_constraintBottom_toTopOf="@+id/nav_bar"
+        android:fillViewport="true"
+        android:clipToPadding="false"
+        android:paddingTop="25dp"
+        android:paddingBottom="50dp"
+        >
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_height="wrap_content">
 
             <FrameLayout
                 android:id="@+id/buffs_frame"
-                android:layout_width="185dp"
+                android:layout_width="0dp"
                 android:layout_height="100dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/home_frames" />
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/home_frames"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/players_frame">
+
+                <TextView
+                    android:id="@+id/buffTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:textAlignment="center"
+                    android:textSize="30sp"
+                    android:fontFamily="@font/andy_bold"
+                    android:text="Buffs"
+                    android:textColor="#37BB07"
+                    />
+
+            </FrameLayout>
+
 
             <FrameLayout
                 android:id="@+id/players_frame"
-                android:layout_width="180dp"
+                android:layout_width="0dp"
                 android:layout_height="100dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/home_frames" />
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/home_frames"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/buffs_frame">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/players_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:textAlignment="center"
+                        android:textSize="30sp"
+                        android:fontFamily="@font/andy_bold"
+                        android:text="Players"
+                        android:textColor="#37BB07"/>
+
+                    <androidx.core.widget.NestedScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:fillViewport="true"
+                        android:clipToPadding="false">
+
+                        <LinearLayout
+                            android:id="@+id/player_names_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+
+
+                        </LinearLayout>
+                    </androidx.core.widget.NestedScrollView>
+
+                </LinearLayout>
+
+
+            </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/loadout_frame"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="75dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/home_frames" />
+                android:background="@drawable/home_frames"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/buffs_frame">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Loadouts"
+                    android:textSize="47sp"
+                    android:fontFamily="@font/andy_bold"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:layout_marginEnd="45dp"
+                    android:textColor="#37BB07"/>
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="20dp"
+                    android:layout_gravity="end"
+                    android:src="@drawable/shield_icon"
+                    />
+
+
+
+
+            </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/potion_frame"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="90dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/home_frames" />
+                android:background="@drawable/home_frames"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/loadout_frame"/>
 
-            <FrameLayout
-                android:id="@+id/nav_bar"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginTop="20dp"
-                android:background="#232427" />
-        </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
-    <!-- Scrollable Content Ends Here -->
+
+
+    <FrameLayout
+        android:id="@+id/nav_bar"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:background="#232427"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
