feat: added foundations of recipe screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -205,10 +205,6 @@
                     android:layout_gravity="end"
                     android:src="@drawable/shield_icon"
                     />
-
-
-
-
             </FrameLayout>
 
             <FrameLayout
@@ -236,6 +232,62 @@
         android:layout_marginTop="20dp"
         android:background="#232427"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/nav_recipe"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/recipe_navbar"
+                android:contentDescription="Recipes"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="10dp" />
+
+            <ImageView
+                android:id="@+id/nav_checklist"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/checklist_navbar"
+                android:contentDescription="Boss Checklist"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="10dp" />
+
+            <ImageView
+                android:id="@+id/nav_map"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/maps_navbar"
+                android:contentDescription="Map"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="10dp" />
+
+            <ImageView
+                android:id="@+id/nav_beastiary"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/beastiary_navbar"
+                android:contentDescription="Beastiary"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="10dp" />
+        </LinearLayout>
+
+    </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
