--- a/app/src/main/res/layout/connect_screen.xml
+++ b/app/src/main/res/layout/connect_screen.xml
@@ -99,7 +99,7 @@
         android:background="#C5C4C4"
         android:ems="10"
         android:inputType="text"
-        android:text=""
+        android:text="192.168.1.179:12345"
         android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -125,5 +125,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ip_form" />
 
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
