--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -7,6 +7,161 @@
     android:background="#1C0340"
     tools:context=".RecipeFragment">
 
+
+    <TextView
+        android:id="@+id/recipe_intro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="44dp"
+        android:text="Recipes"
+        android:textColor="#37BB07"
+        android:fontFamily="@font/andy_bold"
+        android:textSize="40sp"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/recipe_cats"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/recipe_intro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/cats_weapon"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/home_navbar"
+                android:contentDescription="Weapons"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="10dp" />
+
+            <ImageView
+                android:id="@+id/cats_pickaxe"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/recipe_navbar"
+                android:contentDescription="Pickaxes"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="10dp" />
+
+            <ImageView
+                android:id="@+id/cats_armor"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/checklist_navbar"
+                android:contentDescription="Armor"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="10dp" />
+
+            <ImageView
+                android:id="@+id/cats_bossitem"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/beastiary_navbar"
+                android:contentDescription="Boss Summoning Items"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="10dp" />
+        </LinearLayout>
+
+    </FrameLayout>
+
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/recipe_cats"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button_frame"
+        android:fillViewport="true"
+        android:clipToPadding="false"
+        android:paddingTop="50dp"
+        android:paddingBottom="25dp"
+        android:layout_marginBottom="20dp">
+
+        <GridLayout
+            android:id="@+id/recipe_grid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="5"
+            android:rowCount="6"
+            android:padding="10dp"
+            android:layout_gravity="center"
+            android:orientation="horizontal"/>
+
+    </ScrollView>
+
+
+
+    <FrameLayout
+        android:id="@+id/button_frame"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        app:layout_constraintBottom_toTopOf="@id/nav_bar">
+
+        <Button
+            android:id="@+id/left_button"
+            android:layout_width="75dp"
+            android:layout_height="50dp"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginStart="16dp"
+            android:textSize="30sp"
+            android:text="back"
+            android:gravity="center"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:includeFontPadding="false"
+            android:backgroundTint="#185502"
+            />
+
+        <Button
+            android:id="@+id/center_button"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:text="Item"
+            android:textSize="20sp"
+            android:backgroundTint="#185502"
+            />
+
+        <Button
+            android:id="@+id/right_button"
+            android:layout_width="75dp"
+            android:layout_height="50dp"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginEnd="16dp"
+            android:textSize="30sp"
+            android:text="next"
+            android:gravity="center"
+            android:minHeight="0dp"
+            android:minWidth="0dp"
+            android:includeFontPadding="false"
+            android:backgroundTint="#185502"
+            />
+
+    </FrameLayout>
+
     <FrameLayout
         android:id="@+id/nav_bar"
         android:layout_width="match_parent"
