--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -27,61 +27,95 @@
     <FrameLayout
         android:id="@+id/recipe_cats"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         app:layout_constraintTop_toBottomOf="@id/recipe_intro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
+        <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:fillViewport="true"
+            android:scrollbars="none">
 
-            <ImageView
-                android:id="@+id/cats_weapon"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/home_navbar"
-                android:contentDescription="Weapons"
-                android:clickable="true"
-                android:focusable="true"
-                android:padding="10dp" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center">
 
-            <ImageView
-                android:id="@+id/cats_pickaxe"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/recipe_navbar"
-                android:contentDescription="Pickaxes"
-                android:clickable="true"
-                android:focusable="true"
-                android:padding="10dp" />
+                <ImageView
+                    android:id="@+id/cats_melee"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/item_cat_melee"
+                    android:contentDescription="Melee Weapons"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="10dp" />
 
-            <ImageView
-                android:id="@+id/cats_armor"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/checklist_navbar"
-                android:contentDescription="Armor"
-                android:clickable="true"
-                android:focusable="true"
-                android:padding="10dp" />
+                <ImageView
+                    android:id="@+id/cats_ranged"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/item_cat_ranged"
+                    android:contentDescription="Ranged Weapons"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="10dp" />
 
-            <ImageView
-                android:id="@+id/cats_bossitem"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/beastiary_navbar"
-                android:contentDescription="Boss Summoning Items"
-                android:clickable="true"
-                android:focusable="true"
-                android:padding="10dp" />
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/cats_mage"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/item_cat_mage"
+                    android:contentDescription="Mage Weapons"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="10dp" />
+
+                <ImageView
+                    android:id="@+id/cats_summoner"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/item_cat_summon"
+                    android:contentDescription="Summoning Weapons"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="10dp" />
+
+                <ImageView
+                    android:id="@+id/cats_bosssummon"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/item_cat_boss"
+                    android:contentDescription="Boss Summoning Items"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="10dp" />
+
+                <ImageView
+                    android:id="@+id/cats_pickaxe"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/item_cat_pickaxe"
+                    android:contentDescription="Pickaxes"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="10dp" />
+
+                <ImageView
+                    android:id="@+id/cats_chest"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@drawable/item_cat_bodyarmour"
+                    android:contentDescription="Chest Armour"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="10dp" />
+
+            </LinearLayout>
+        </HorizontalScrollView>
 
     </FrameLayout>
 
