feat: add statistics to npc page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -203,8 +203,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="20dp"
                     android:layout_gravity="end"
-                    android:src="@drawable/shield_icon"
-                    />
+                    android:src="@drawable/shield_icon"/>
             </FrameLayout>
 
             <FrameLayout
