--- a/app/src/main/res/layout/beastiary_info.xml
+++ b/app/src/main/res/layout/beastiary_info.xml
@@ -24,86 +24,184 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:id="@+id/main_background"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:layout_marginTop="130dp"
+        android:scaleType="fitXY"
+        android:contentDescription="Background"
+        app:srcCompat="@drawable/beastiary_back2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/npc_image"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:scaleType="fitCenter"
+        android:layout_marginTop="160dp"
+        android:contentDescription="NPC Image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/npc_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NPC Name"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/andy_bold"
+        app:layout_constraintTop_toBottomOf="@id/npc_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/main_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/beastiary_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/button_frame"
         android:fillViewport="true"
         android:clipToPadding="false"
         android:paddingBottom="25dp"
-        android:layout_marginBottom="20dp">
+        app:layout_constraintTop_toBottomOf="@id/npc_name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:padding="16dp">
 
-            <!-- NPC Image -->
-            <ImageView
-                android:id="@+id/npc_image"
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:scaleType="fitCenter"
-                android:layout_gravity="center_horizontal"
-                android:contentDescription="NPC Image" />
-
-            <TextView
-                android:id="@+id/npc_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="NPC Name"
-                android:textColor="@color/white"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:fontFamily="@font/andy_bold"
-                android:gravity="center"
-                android:layout_gravity="center_horizontal" />
-
-            <!-- Stats Section -->
-            <TextView
-                android:id="@+id/stats_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Stats"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:paddingTop="16dp"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="8dp">
+            <FrameLayout
+                android:id="@+id/stats_frame1"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/home_frames"
+                app:layout_constraintEnd_toStartOf="@id/stats_frame2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.48">
 
                 <TextView
                     android:id="@+id/npc_hp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="HP: 1000"
-                    android:paddingEnd="16dp"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:fontFamily="@font/andy_bold"
+                    android:text="Life"
+                    android:textAlignment="textEnd"
+                    android:layout_marginEnd="30dp"
+                    android:textColor="@color/white"
+                    android:textSize="30sp" />
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    android:src="@drawable/npc_health" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/stats_frame2"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/home_frames"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/stats_frame1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.48">
 
                 <TextView
                     android:id="@+id/npc_defense"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Defense: 50"/>
-            </LinearLayout>
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:fontFamily="@font/andy_bold"
+                    android:text="Defense"
+                    android:textAlignment="textEnd"
+                    android:layout_marginEnd="30dp"
+                    android:textColor="@color/white"
+                    android:textSize="30sp" />
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    android:src="@drawable/npc_defense" />
+            </FrameLayout>
 
-            <!-- Drops Section -->
+            <FrameLayout
+                android:id="@+id/stats_frame3"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/home_frames"
+                app:layout_constraintEnd_toStartOf="@id/stats_frame4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/stats_frame1"
+                app:layout_constraintWidth_percent="0.48">
+
+                <TextView
+                    android:id="@+id/npc_attack"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:fontFamily="@font/andy_bold"
+                    android:text="Attack"
+                    android:textAlignment="textEnd"
+                    android:layout_marginEnd="30dp"
+                    android:textColor="@color/white"
+                    android:textSize="30sp" />
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    android:src="@drawable/npc_health" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/stats_frame4"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/home_frames"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/stats_frame3"
+                app:layout_constraintTop_toBottomOf="@id/stats_frame2"
+                app:layout_constraintWidth_percent="0.48">
+
+                <TextView
+                    android:id="@+id/npc_knockback"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:fontFamily="@font/andy_bold"
+                    android:text="Knockback"
+                    android:textAlignment="textEnd"
+                    android:layout_marginEnd="30dp"
+                    android:textColor="@color/white"
+                    android:textSize="30sp" />
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    android:src="@drawable/npc_defense" />
+            </FrameLayout>
+
             <TextView
                 android:id="@+id/drops_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="16dp"
+                android:paddingTop="32dp"
                 android:text="Drops"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/stats_frame3"
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/npc_drops_recycler"
@@ -111,14 +209,24 @@
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
                 android:paddingTop="8dp"
-                android:paddingBottom="16dp"/>
+                android:paddingBottom="16dp"
+                app:layout_constraintTop_toBottomOf="@id/drops_title"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-
-        </LinearLayout>
+            <Button
+                android:id="@+id/back_button"
+                android:layout_width="75dp"
+                android:layout_height="50dp"
+                android:textSize="30sp"
+                android:text="Back"
+                android:gravity="center"
+                android:backgroundTint="#185502"
+                app:layout_constraintTop_toBottomOf="@id/npc_drops_recycler"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
-
-
 
     <FrameLayout
         android:id="@+id/button_frame"
@@ -127,35 +235,7 @@
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@id/nav_bar">
 
-        <Button
-            android:id="@+id/left_button"
-            android:layout_width="75dp"
-            android:layout_height="50dp"
-            android:layout_gravity="start|center_vertical"
-            android:layout_marginStart="16dp"
-            android:textSize="30sp"
-            android:text="&lt;"
-            android:gravity="center"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:includeFontPadding="false"
-            android:backgroundTint="#185502"
-            />
 
-        <Button
-            android:id="@+id/right_button"
-            android:layout_width="75dp"
-            android:layout_height="50dp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="16dp"
-            android:textSize="30sp"
-            android:text="&gt;"
-            android:gravity="center"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:includeFontPadding="false"
-            android:backgroundTint="#185502"
-            />
 
     </FrameLayout>
 
