--- a/app/src/main/res/layout/beastiary.xml
+++ b/app/src/main/res/layout/beastiary.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1C0340"
-    tools:context=".RecipeFragment">
+    tools:context=".ItemFragment">
 
 
     <TextView
