feat: half of torso armour preview complete

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
             android:id="@+id/player_frame"
             android:layout_width="350dp"
             android:layout_height="300dp"
+            android:layout_marginTop="30dp"
             android:clipChildren="false"
             android:clipToPadding="false"
             android:background="@android:color/transparent"/>
