fix: item fragment will go back to correct category if user goes back from an item page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,7 +140,7 @@
                     android:textAlignment="center"
                     android:textSize="30sp"
                     android:fontFamily="@font/andy_bold"
-                    android:text="Buffs"
+                    android:text=""
                     android:textColor="#37BB07"
                     />
 
