--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -118,18 +118,44 @@
 
     </FrameLayout>
 
+    <EditText
+        android:id="@+id/search_bar"
+        android:layout_width="270dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="70dp"
+        android:background="#C5C4C4"
+        android:ems="10"
+        android:inputType="text"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recipe_cats"
+        app:layout_constraintBottom_toTopOf="@id/recipe_scroll"/>
+
     <ScrollView
+        android:id="@+id/recipe_scroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/recipe_cats"
+        app:layout_constraintTop_toBottomOf="@id/search_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/button_frame"
         android:fillViewport="true"
         android:clipToPadding="false"
-        android:paddingTop="50dp"
+        android:paddingTop="25dp"
         android:paddingBottom="25dp"
         android:layout_marginBottom="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
         <GridLayout
             android:id="@+id/recipe_grid"
@@ -141,12 +167,14 @@
             android:layout_gravity="center"
             android:orientation="horizontal"/>
 
+        </LinearLayout>
+
     </ScrollView>
 
     <FrameLayout
         android:id="@+id/button_frame"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@id/nav_bar">
 
@@ -158,6 +186,7 @@
             android:layout_marginStart="16dp"
             android:textSize="30sp"
             android:text="&lt;"
+            android:textColor="@color/white"
             android:gravity="center"
             android:minHeight="0dp"
             android:minWidth="0dp"
@@ -167,10 +196,13 @@
 
         <Button
             android:id="@+id/center_button"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:textSize="20sp"
+            android:textSize="26sp"
+            android:fontFamily="@font/andy_bold"
+            android:text="Search"
+            android:textColor="@color/white"
             android:backgroundTint="#185502"
             />
 
@@ -182,6 +214,7 @@
             android:layout_marginEnd="16dp"
             android:textSize="30sp"
             android:text="&gt;"
+            android:textColor="@color/white"
             android:gravity="center"
             android:minHeight="0dp"
             android:minWidth="0dp"
